--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="card">
           <h1>TITLE HEADING</h1>
           <h5>Title description, Dec 7, 2017</h5>
-          <div class="fakeimg" style="height: 200px">Image</div>
+          <div class="fakeimg" style="height: 200">Image</div>
           <p>Some text..</p>
           <p>
             Sunt in culpa qui officia deserunt mollit anim id est laborum
@@ -37,7 +37,7 @@
         <div class="card">
           <h1>TITLE HEADING</h1>
           <h5>Title description, Dec 7, 2017</h5>
-          <div class="fakeimg" style="height: 200px">Image</div>
+          <div class="fakeimg" style="height: 200">Image</div>
           <p>Some text..</p>
           <p>
             Sunt in culpa qui officia deserunt mollit anim id est laborum
@@ -50,7 +50,7 @@
       <div class="right-column">
         <div class="card">
           <h2>About me</h2>
-          <div class="fakeimg" style="height: 100px">Image</div>
+          <div class="fakeimg" style="height: 100">Image</div>
           <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
         </div>
         <div class="card">
